# bizaxl_advantage

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
bizaxl_advantage/: demo.py  hooks.py  modules.txt  utils.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_buyer_item_price/: ba_buyer_item_price.json  ba_buyer_item_price.py  test_ba_buyer_item_price.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_buyer_price_tier/: ba_buyer_price_tier.json  ba_buyer_price_tier.py  test_ba_buyer_price_tier.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_buyer_restricted_item_group/: ba_buyer_restricted_item_group.json  ba_buyer_restricted_item_group.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_order_status_log/: ba_order_status_log.json  ba_order_status_log.py  test_ba_order_status_log.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_portal_buyer/: ba_portal_buyer.json  ba_portal_buyer.py  test_ba_portal_buyer.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_portal_catalog_item/: ba_portal_catalog_item.json  ba_portal_catalog_item.py  test_ba_portal_catalog_item.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_portal_order/: ba_portal_order.json  ba_portal_order.py  test_ba_portal_order.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_portal_order_item/: ba_portal_order_item.json  ba_portal_order_item.py
bizaxl_advantage/b2b_ordering_portal/doctype/ba_stock_snapshot/: ba_stock_snapshot.json  ba_stock_snapshot.py  (+1 more)
bizaxl_advantage/fixtures/: notification.json  role.json  web_form.json  workspace.json
(+40 files in other folders)
