[project]
name = "bizaxl_advantage"
authors = [
    { name = "Bizaxl", email = "dev@bizaxl.example" }
]
description = "B2B Ordering Portal, Field Sales Automation and Tiered Product Ladder for bizaxl Medical Retail on ERPNext v15+."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
